--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.allow-bean-definition-overriding=true
 server.port = 8081
 
 keycloak.auth-server-url=http://localhost:8080/auth
-keycloak.realm=Drools-demo
+keycloak.realm=drools-demo
 keycloak.resource=drools-demo-app
 keycloak.public-client=true
 keycloak.bearer-only=true
